<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThermalProfiler</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="debugLog_default">Debug Log</string>
    <string name="text_intro">To get started, press %1$s, then %2$s.</string>
    <string name="button_record_start">START RECORDING</string>
    <string name="button_record_stop">STOP RECORDING</string>
    <string name="button_benchmark_start">START BENCHMARK</string>
    <string name="button_benchmark_stop">STOP BENCHMARK</string>
    <string name="label_threads">Benchmark Threads:</string>
    <string name="editText_cores_default">4</string>
    <string name="button_record">RECORD</string>
    <string name="button_benchmark">BENCHMARK</string>
    <string name="button_debug_function">Debug Function</string>
    <string name="label_debugLog">DEBUG LOG</string>
    <string name="checkBox_util">Record utilization</string>
    <string name="label_ambient">Ambient Temp. (°C):</string>

</resources>
