<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkgnd_summer"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Executive">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_intro"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_threads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_threads"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editText_threads"
                android:layout_width="@dimen/editText_cores_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="number"
                android:text="@string/editText_cores_default"
                android:textColor="#ffffffff"
                android:background="#ff000000"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar_threads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/max_cores"
            android:progress="@integer/max_cores" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_ambient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_ambient"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editText_ambient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:textColor="#ffffffff"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="right"
                android:enabled="false"
                android:background="#ff000000"
                android:padding="10dp" />

            <Button
                android:id="@+id/button_ambientPlus"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textColor="#ff00ff00"
                android:onClick="buttonAmbientPlus"
                android:editable="false"
                android:padding="20dp" />

            <Button
                android:id="@+id/button_ambientMinus"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="@color/red"
                android:onClick="buttonAmbientMinus"
                android:padding="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_debugLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/label_debugLog"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editText_debugLog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:gravity="bottom|left"
            android:inputType="textMultiLine"
            android:minWidth="@dimen/editText_debugLog_width"
            android:scrollbars="vertical"
            android:text="@string/debugLog_default"
            android:background="#ff000000"
            android:linksClickable="false"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button_debugFn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_debug_function"
            android:onClick="debugFunction" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/toggleButton_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@drawable/button_thermal"
            android:drawableLeft="@drawable/button_thermal_icon"
            android:drawablePadding="16dp"
            android:gravity="left|center_vertical"
            android:onClick="buttonRecord"
            android:text="@string/button_record"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textOff="@string/button_record_start"
            android:textOn="@string/button_record_stop" />

        <ToggleButton
            android:id="@+id/toggleButton_benchmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_thermal"
            android:drawableLeft="@drawable/button_thermal_icon"
            android:drawablePadding="16dp"
            android:gravity="left|center_vertical"
            android:onClick="buttonBenchmark"
            android:text="@string/button_benchmark"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textOff="@string/button_benchmark_start"
            android:textOn="@string/button_benchmark_stop" />

    </LinearLayout>

</LinearLayout>
